--- a/web/app/views/components/collection/events/_collection.html.erb
+++ b/web/app/views/components/collection/events/_collection.html.erb
@@ -77,7 +77,7 @@
 		</div>
 	<% end %>
 	<% if title[:secondary] %>
-		<div class="px-5 pt-1 text-sm leading-tight text-gray-700 md:px-0 me-collection__title-secondary">
+		<div class="leading-tight mb-3 md:px-0 me-collection__title-secondary mt-1 px-5 text-gray-700 text-sm">
 			<%= title[:secondary] %>
 		</div>
 	<% end %>
