--- a/web/app/views/components/events/_saves.html.erb
+++ b/web/app/views/components/events/_saves.html.erb
@@ -21,7 +21,7 @@
 		<% end %>
 	<% end %>
 	<div class="relative">
-		<div class="absolute top-0 left-0 z-20 items-center hidden w-10 h-full rounded-full pointer-events-none select-none md:flex bg-x-white-to-transparent">
+		<div class="absolute top-0 left-0 z-20 items-center hidden w-10 h-full rounded-full select-none md:flex bg-x-white-to-transparent">
 			<div data-action="click->slider#left" class="my-auto -ml-5 text-gray-700 transition-colors duration-200 bg-white border rounded-full shadow-md cursor-pointer hover:text-chateau-green-500">
 				<svg class="w-10 h-10 p-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black">
 					<path d="M0 0h24v24H0V0z" fill="none"/>
@@ -29,7 +29,7 @@
 				</svg>
 			</div>
 		</div>
-		<div class="absolute top-0 right-0 z-20 items-center hidden w-10 h-full rounded-full pointer-events-none select-none md:flex bg-x-transparent-to-white">
+		<div class="absolute top-0 right-0 z-20 items-center hidden w-10 h-full rounded-full select-none md:flex bg-x-transparent-to-white">
 			<div data-action="click->slider#right" class="my-auto ml-5 text-gray-700 transition-colors duration-200 bg-white border rounded-full shadow-md cursor-pointer hover:text-chateau-green-500">
 				<svg class="w-10 h-10 p-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black">
 					<path d="M0 0h24v24H0V0z" fill="none"/>
