Add ripple to sign_in and sing_up

--- a/web/app/javascript/stylesheets/_utils.scss
+++ b/web/app/javascript/stylesheets/_utils.scss
@@ -46,6 +46,10 @@
   .grid-max-content {
     grid-template-columns: max-content;
   }
+
+  .content-visibility-auto {
+    content-visibility: auto;
+  }
 }
 
 .ripple {
