--- a/web/app/views/users/registrations/new.html.erb
+++ b/web/app/views/users/registrations/new.html.erb
@@ -1,7 +1,8 @@
 <section class="mt-12 md:mt-20 is-animated">
 	<div class="px-5 md:w-4/12 md:mx-auto tap-highlight-none">
 		<div class="inline-block w-screen p-5 mb-3 -ml-5 text-sm antialiased text-gray-600 bg-gray-100 md:mx-0 md:rounded-lg md:w-full">
-			Já tem uma conta? <%= link_to 'Faça login', new_user_session_path, class: "border inline-block ml-1 px-2 py-1 rounded-full cursor-pointer" %>
+			Já tem uma
+			conta? <%= link_to 'Faça login', new_user_session_path, class: "border inline-block ml-1 px-2 py-1 rounded-full cursor-pointer" %>
 		</div>
 
 		<% if alert %>
@@ -15,7 +16,7 @@
 
 			<div class="">
 				<div class="my-2 space-y-2 select-none">
-					<%= link_to user_google_oauth2_omniauth_authorize_path, class: "cursor-pointer shadow-sm border font-semibold inline-flex items-center px-5 py-3 rounded-lg w-full text-gray-700" do %>
+					<%= link_to user_google_oauth2_omniauth_authorize_path, data: { controller: 'ripple' }, class: "ripple ripple-black relative overflow-hidden cursor-pointer shadow-sm border font-semibold inline-flex items-center px-5 py-3 rounded-lg w-full text-gray-700" do %>
 						<svg class="w-5 h-5 mr-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 533.5 544.3">
 							<path d="M533.5 278.4c0-18.5-1.5-37.1-4.7-55.3H272.1v104.8h147c-6.1 33.8-25.7 63.7-54.4 82.7v68h87.7c51.5-47.4 81.1-117.4 81.1-200.2z" fill="#4285f4"/>
 							<path d="M272.1 544.3c73.4 0 135.3-24.1 180.4-65.7l-87.7-68c-24.4 16.6-55.9 26-92.6 26-71 0-131.2-47.9-152.8-112.3H28.9v70.1c46.2 91.9 140.3 149.9 243.2 149.9z" fill="#34a853"/>
@@ -24,13 +25,13 @@
 						</svg>
 						Criar conta com gmail
 					<% end %>
-					<%= link_to user_facebook_omniauth_authorize_path, class: "cursor-pointer shadow-sm border font-semibold inline-flex items-center px-5 py-3 rounded-lg w-full text-gray-700" do %>
+					<%= link_to user_facebook_omniauth_authorize_path, data: { controller: 'ripple' }, class: "ripple ripple-black relative overflow-hidden cursor-pointer shadow-sm border font-semibold inline-flex items-center px-5 py-3 rounded-lg w-full text-gray-700" do %>
 						<svg class="w-5 h-5 mr-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14222 14222" shape-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="nonzero">
 							<path d="M14222 7111C14222 3184 11038 0 7111 0S0 3184 0 7111c0 3549 2600 6491 6000 7025V9167H4194V7111h1806V5544c0-1782 1062-2767 2686-2767 778 0 1592 139 1592 139v1750h-897c-883 0-1159 548-1159 1111v1334h1972l-315 2056H8222v4969c3400-533 6000-3475 6000-7025z" fill="#1977f3"/>
 							<path d="M9879 9167l315-2056H8222V5777c0-562 275-1111 1159-1111h897V2916s-814-139-1592-139c-1624 0-2686 984-2686 2767v1567H4194v2056h1806v4969c362 57 733 86 1111 86s749-30 1111-86V9167h1657z" fill="#fefefe"/>
 						</svg>
 						Criar conta com facebook
-				<% end %>
+					<% end %>
 				</div>
 
 				<div class="inline-block w-full p-3 mb-10 space-y-3 text-gray-800 border rounded-lg shadow-lg">
