Add href verification tag

--- a/web/app/views/layouts/welcome.html.erb
+++ b/web/app/views/layouts/welcome.html.erb
@@ -31,7 +31,7 @@
 	</style>
 
 	<%= stylesheet_pack_tag 'welcome', media: 'all', 'data-turbolinks-track': 'reload' %>
-
+	<meta name="ahrefs-site-verification" content="80da30957eb75f93ad532d2b460ba12112e89b2e64775da1150f2e02566667cf">
 </head>
 <body>
 
