Fix in swipable bot

--- a/web/app/views/components/swipable/_swipable.html.erb
+++ b/web/app/views/components/swipable/_swipable.html.erb
@@ -1,17 +1,15 @@
-<div class="h-content md:mx-auto md:w-128 px-5"
+<div class="px-5 h-content md:mx-auto md:w-128"
 		 data-reflex-permanent
 		 data-controller="swipable"
 		 data-target="swipable.swipable"
-		 data-swipable-hidden="true"
-		 data-swipable-bot-on="true"
 		 data-swipable-user-name="<%= current_user.try(:first_name) %>"
 		 data-swipable-user-signin-count="<%= current_user&.sign_in_count %>"
 		 data-swipable-user-taste-events-saved="<%= current_user&.taste_events_saved&.size %>"
 		 style="min-height: 300px">
-	<div class="hidden pt-2 pb-5 pl-5 pr-2 mx-5 overflow-x-hidden overflow-y-scroll transition-all border rounded-lg shadow-lg h-screen-1/2 is-bot md:h-screen-3/4"
+	<div class="hidden duration-500 pt-2 pb-5 pl-5 pr-2 overflow-x-hidden overflow-y-scroll transition-all border rounded-lg shadow-lg opacity-0 h-screen-1/2 is-bot md:h-screen-3/4"
 			 data-swipable-module="onboarding"
 			 data-target="swipable.onboarding"></div>
-	<div class="hidden transition-all opacity-0"
+	<div class="hidden duration-500 transition-all opacity-0"
 			 data-swipable-module="swipable-items"
 			 data-target="swipable.items">
 		<div data-swipable-module="stacked-cards-block" class="relative">
@@ -32,13 +30,13 @@
 			</div>
 		</div>
 		<div class="flex items-center justify-center mt-10 space-x-5">
-			<div data-controller="ripple" data-swipable-module="left-action" class="ripple ripple-black overflow-hidden relative p-3 text-red-500 bg-red-100 rounded-full cursor-pointer tap-highlight-none h-content w-content">
+			<div data-controller="ripple" data-swipable-module="left-action" class="relative p-3 overflow-hidden text-red-500 bg-red-100 rounded-full cursor-pointer ripple ripple-black tap-highlight-none h-content w-content">
 				<svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 fill-current" viewBox="0 0 24 24">
 					<path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/>
 					<path d="M10.88 21.94l5.53-5.54c.37-.37.58-.88.58-1.41V5c0-1.1-.9-2-2-2H6c-.8 0-1.52.48-1.83 1.21L.91 11.82C.06 13.8 1.51 16 3.66 16h5.65l-.95 4.58c-.1.5.05 1.01.41 1.37.59.58 1.53.58 2.11-.01zM21 3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2s2-.9 2-2V5c0-1.1-.9-2-2-2z"/>
 				</svg>
 			</div>
-			<div data-controller="ripple" data-swipable-module="right-action" class="ripple ripple-black overflow-hidden relative p-3 rounded-full cursor-pointer bg-chateau-green-100 tap-highlight-none h-content text-chateau-green-500 w-content">
+			<div data-controller="ripple" data-swipable-module="right-action" class="relative p-3 overflow-hidden rounded-full cursor-pointer ripple ripple-black bg-chateau-green-100 tap-highlight-none h-content text-chateau-green-500 w-content">
 				<svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 fill-current" viewBox="0 0 24 24">
 					<path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/>
 					<path d="M13.12 2.06L7.58 7.6c-.37.37-.58.88-.58 1.41V19c0 1.1.9 2 2 2h9c.8 0 1.52-.48 1.84-1.21l3.26-7.61C23.94 10.2 22.49 8 20.34 8h-5.65l.95-4.58c.1-.5-.05-1.01-.41-1.37-.59-.58-1.53-.58-2.11.01zM3 21c1.1 0 2-.9 2-2v-8c0-1.1-.9-2-2-2s-2 .9-2 2v8c0 1.1.9 2 2 2z"/>
@@ -49,7 +47,7 @@
 		<%#= link_to "Pular esta etapa por agora", feed_path(skip_swipable: true) %>
 		<!-- </div> -->
 	</div>
-	<div data-swipable-module="final-state" class="flex items-center justify-center hidden opacity-0 text-gray-800 transition-all duration-500 border rounded-lg shadow-lg h-screen-1/2">
+	<div data-swipable-module="final-state" class="flex items-center justify-center hidden text-gray-800 transition-all duration-500 border rounded-lg shadow-lg opacity-0 h-screen-1/2">
 		Atualizando recomendações...
 	</div>
 </div>
