--- a/web/app/views/users/edit.html.erb
+++ b/web/app/views/users/edit.html.erb
@@ -1,16 +1,8 @@
-<section class="me-page">
-	<section class="me-section me-section--full-height">
-		<div class="me-section__inner">
-			<div class="me-section__description">
-				<h2>
-					Editar conta
-				</h2>
-				<%# if current_user.admin? %>
-				<%#= render 'users/admin/form', user: @user %>
-				<%# else %>
-				<%= render 'form', user: @user %>
-				<%# end %>
-			</div>
-		</div>
-	</section>
-</section>
+<div class="md:px-0 md:w-3/12 min-h-screen mt-20 mx-auto px-5">
+	<div class="inline-block w-full p-3 mb-10 space-y-3 text-gray-800 border rounded-lg shadow-lg">
+		<h2 class="font-semibold text-gray-800 text-lg">
+			Editar conta
+		</h2>
+		<%= render 'form', user: @user %>
+	</div>
+</div>
