--- a/web/app/views/components/collection/events/_collection.html.erb
+++ b/web/app/views/components/collection/events/_collection.html.erb
@@ -40,116 +40,149 @@
 
 %>
 
-<%# if display_if_empty || (events && events.size > if_greater_than) %>
-<div data-controller="section"
-		 data-target="section.section"
-		 data-section-load-more-loading="false"
-		 data-section-limit="<%= items.size %>"
-		 data-section-total-count="<%= total_count %>"
-		 data-section-infinite-scroll-horizontal="<%= infinite_scroll_horizontal %>"
-		 data-section-infinite-scroll-vertical="<%= infinite_scroll_vertical %>"
-		 data-section-disposition="<%= disposition %>"
-		 data-section-identifier="<%= identifier %>"
-		 data-section-stimulus-session="<%= session[:stimulus].to_param %>"
-		 id="<%= identifier %>">
-	<%= content_tag :div,
-									data:    {
-											controller: 'ripple'
-									},
-									class:   class_string('relative overflow-hidden ripple ripple-black cursor-pointer flex justify-between group': continue_to,
-																				'flex justify-between':                                                                   !continue_to),
-									onclick: continue_to ? "Turbolinks.visit('#{continue_to}')" : nil do %>
-		<h2 class="flex-1 pl-5 text-xl font-bold leading-6 text-gray-800 group-hover:text-chateau-green-500 md:leading-normal md:pl-0 md:text-5xl">
-			<%= title[:principal] %>
-		</h2>
-		<% if continue_to && user %>
-			<div class="inline-flex items-center pr-3 text-xs text-gray-800 group-hover:text-chateau-green-500 md:pr-0"
-					 data-action="click->section#seeMoreInNewPage">
-				<svg class="w-5 h-auto ml-1 fill-current md:hidden md:ml-2 md:w-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-					<path d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"/>
-				</svg>
+<% if display_if_empty %>
+	<div data-controller="section"
+			 data-target="section.section"
+			 data-section-load-more-loading="false"
+			 data-section-limit="<%= items.size %>"
+			 data-section-total-count="<%= total_count %>"
+			 data-section-infinite-scroll-horizontal="<%= infinite_scroll_horizontal %>"
+			 data-section-infinite-scroll-vertical="<%= infinite_scroll_vertical %>"
+			 data-section-disposition="<%= disposition %>"
+			 data-section-identifier="<%= identifier %>"
+			 data-section-stimulus-session="<%= session[:stimulus].to_param %>"
+			 id="<%= identifier %>">
+		<%= content_tag :div,
+										data:    {
+												controller: 'ripple'
+										},
+										class:   class_string('relative overflow-hidden ripple ripple-black cursor-pointer flex justify-between group': continue_to,
+																					'flex justify-between':                                                                   !continue_to),
+										onclick: continue_to ? "Turbolinks.visit('#{continue_to}')" : nil do %>
+			<h2 class="flex-1 pl-5 text-xl font-bold leading-6 text-gray-800 group-hover:text-chateau-green-500 md:leading-normal md:pl-0 md:text-5xl">
+				<%= title[:principal] %>
+			</h2>
+			<% if continue_to && user %>
+				<div class="inline-flex items-center pr-3 text-xs text-gray-800 group-hover:text-chateau-green-500 md:pr-0"
+						 data-action="click->section#seeMoreInNewPage">
+					<svg class="w-5 h-auto ml-1 fill-current md:hidden md:ml-2 md:w-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+						<path d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"/>
+					</svg>
+				</div>
+			<% end %>
+		<% end %>
+		<% if title[:tertiary] %>
+			<div class="inline-block pl-5 mt-1 mb-1 text-sm text-gray-600 md:-mt-1 md:pl-0 md:text-lg">
+				<%= title[:tertiary] %>
 			</div>
 		<% end %>
-	<% end %>
-	<% if title[:tertiary] %>
-		<div class="inline-block pl-5 mt-1 mb-1 text-sm text-gray-600 md:-mt-1 md:pl-0 md:text-lg">
-			<%= title[:tertiary] %>
-		</div>
-	<% end %>
-	<% if title[:secondary] %>
-		<div class="leading-tight mb-3 md:px-0 me-collection__title-secondary mt-1 px-5 text-gray-700 text-sm">
-			<%= title[:secondary] %>
-		</div>
-	<% end %>
-	<% if custom_title %>
-		<div class="mt-3 mb-2 md:mb-6 scrollx"
-				 data-fixed="true">
-			<%= custom_title %>
-		</div>
-	<% end %>
-	<% if categories || ocurrences %>
-		<div data-reflex-permanent class="my-4 space-y-2 md:space-y-3"
-				 data-controller="filter"
-				 data-filter-inactive-class='["bg-gray-100","text-gray-800"]'
-				 data-filter-active-class='["bg-chateau-green-200","border-chateau-green-400","text-chateau-green-800"]'
-				 data-target="section.filter">
-			<%= render(partial: 'feeds/filter',
-								 locals:  {
-										 filters:  categories,
-										 type:     'categories',
-										 selected: selected
-								 },
-								 cached:  false) %>
-			<%= render(partial: 'feeds/filter',
-								 locals:  {
-										 filters:  kinds,
-										 type:     'kinds',
-										 selected: selected
-								 },
-								 cached:  false) %>
-			<%= title[:ocurrences] %>
-			<%= render(partial: 'feeds/filter',
-								 locals:  {
-										 filters:  ocurrences,
-										 type:     'days',
-										 selected: selected
-								 },
-								 cached:  false) %>
-		</div>
-	<% end %>
-	<% if items.present? %>
-		<div data-target="section.grid"
-				 class="md:mt-2">
-			<div class="<%= html.dig(:grid, :css) || class_names('md:grid-cols-4 md:grid-flow-row md:overflow-x-visible md:pl-0 md:row-gap-16 pt-3 pb-2 grid col-gap-6 grid-flow-col pl-5 grid-after-margin scrollx') %>"
-					 data-section-turbolinks-persist-scroll="0"
-					 data-target="section.scrollContainer">
-				<%= render(partial:    'components/collection/event',
-									 collection: items,
-									 as:         :event,
-									 locals:     {
-											 user:            user,
-											 identifier:      identifier,
-											 display_similar: display_similar,
-											 disposition:     disposition,
-											 show_similar_to: session[:stimulus][:show_similar_to],
-											 opts:            {
-													 save_button: opts.dig(:save_button)
-											 }
+		<% if title[:secondary] %>
+			<div class="leading-tight mb-3 md:px-0 me-collection__title-secondary mt-1 px-5 text-gray-700 text-sm">
+				<%= title[:secondary] %>
+			</div>
+		<% end %>
+		<% if custom_title.present? %>
+			<div class="mt-3 mb-2 md:mb-6 scrollx"
+					 data-fixed="true">
+				<%= custom_title %>
+			</div>
+		<% end %>
+		<% if categories || ocurrences %>
+			<div data-reflex-permanent class="my-4 space-y-2 md:space-y-3"
+					 data-controller="filter"
+					 data-filter-inactive-class='["bg-gray-100","text-gray-800"]'
+					 data-filter-active-class='["bg-chateau-green-200","border-chateau-green-400","text-chateau-green-800"]'
+					 data-target="section.filter">
+				<%= render(partial: 'feeds/filter',
+									 locals:  {
+											 filters:  categories,
+											 type:     'categories',
+											 selected: selected
 									 },
-									 cached:     false) %>
-				<% if disposition == :horizontal && (infinite_scroll_horizontal || display_load_more) && total_count > items.size %>
-					<div class="order-last md:hidden" data-controller="toggle-loader"
+									 cached:  false) %>
+				<%= render(partial: 'feeds/filter',
+									 locals:  {
+											 filters:  kinds,
+											 type:     'kinds',
+											 selected: selected
+									 },
+									 cached:  false) %>
+				<%= title[:ocurrences] %>
+				<%= render(partial: 'feeds/filter',
+									 locals:  {
+											 filters:  ocurrences,
+											 type:     'days',
+											 selected: selected
+									 },
+									 cached:  false) %>
+			</div>
+		<% end %>
+		<% if items.present? %>
+			<div data-target="section.grid"
+					 class="md:mt-2">
+				<div class="<%= html.dig(:grid, :css) || class_names('md:grid-cols-4 md:grid-flow-row md:overflow-x-visible md:pl-0 md:row-gap-16 pt-3 pb-2 grid col-gap-6 grid-flow-col pl-5 grid-after-margin scrollx') %>"
+						 data-section-turbolinks-persist-scroll="0"
+						 data-target="section.scrollContainer">
+					<%= render(partial:    'components/collection/event',
+										 collection: items,
+										 as:         :event,
+										 locals:     {
+												 user:            user,
+												 identifier:      identifier,
+												 display_similar: display_similar,
+												 disposition:     disposition,
+												 show_similar_to: session[:stimulus][:show_similar_to],
+												 opts:            {
+														 save_button: opts.dig(:save_button)
+												 }
+										 },
+										 cached:     false) %>
+					<% if disposition == :horizontal && (infinite_scroll_horizontal || display_load_more) && total_count > items.size %>
+						<div class="order-last md:hidden" data-controller="toggle-loader"
+								 data-toggle-loader-listener-on="section#loadMoreHere->started"
+								 data-toggle-loader-listener-off="section#loadMoreHere->finished">
+							<div class="flex items-center px-5 py-2 my-10 mr-10 text-center rounded-full shadow-xl cursor-pointer bg-chateau-green-100 text-chateau-green-800 w-content"
+									 data-action="click->section#loadMoreHere"
+									 data-target="section.loadMoreHorizontal toggle-loader.off">
+								Mostrar mais
+								<svg class="w-4 h-4 ml-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+									<path d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"/>
+								</svg>
+							</div>
+							<div class="flex hidden px-5 py-2 my-10 mr-10 text-center rounded-full shadow-xl cursor-pointer bg-chateau-green-100 text-chateau-green-800 w-content"
+									 data-target="toggle-loader.on">
+								Carregando
+								<svg data-target="toggle-loader.onIcon" class="w-5 h-5 my-auto fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+									<path fill="none" d="M0 0h24v24H0V0z"/>
+									<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
+								</svg>
+							</div>
+						</div>
+					<% end %>
+
+				</div>
+				<% if (disposition == :horizontal && mobile_device?) &&
+						session[:stimulus][:in_this_section] == identifier &&
+						show_similar_to.present? %>
+					<%= render partial: 'components/collection/similar',
+										 locals:  {
+												 data: {
+														 user:  user,
+														 event: Event.find(show_similar_to.last)
+												 }
+										 },
+										 cached:  false %>
+				<% end %>
+				<% if disposition == :vertical && (infinite_scroll_vertical || display_load_more) && total_count > items.size %>
+					<div data-controller="toggle-loader"
 							 data-toggle-loader-listener-on="section#loadMoreHere->started"
 							 data-toggle-loader-listener-off="section#loadMoreHere->finished">
-						<div class="flex items-center px-5 py-2 my-10 mr-10 text-center rounded-full shadow-xl cursor-pointer bg-chateau-green-100 text-chateau-green-800 w-content"
+						<div class="flex px-5 py-2 mx-auto my-10 text-center rounded-full shadow-xl cursor-pointer bg-chateau-green-100 text-chateau-green-800 w-content"
 								 data-action="click->section#loadMoreHere"
-								 data-target="section.loadMoreHorizontal toggle-loader.off">
+								 data-target="section.loadMoreVertical toggle-loader.off">
 							Mostrar mais
-							<svg class="w-4 h-4 ml-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-								<path d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"/>
-							</svg>
 						</div>
-						<div class="flex hidden px-5 py-2 my-10 mr-10 text-center rounded-full shadow-xl cursor-pointer bg-chateau-green-100 text-chateau-green-800 w-content"
+						<div class="flex hidden px-5 py-2 mx-auto my-10 text-center rounded-full shadow-xl cursor-pointer bg-chateau-green-100 text-chateau-green-800 w-content"
 								 data-target="toggle-loader.on">
 							Carregando
 							<svg data-target="toggle-loader.onIcon" class="w-5 h-5 my-auto fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -159,49 +192,9 @@
 						</div>
 					</div>
 				<% end %>
-
 			</div>
-			<% if (disposition == :horizontal && mobile_device?) &&
-					session[:stimulus][:in_this_section] == identifier &&
-					show_similar_to.present? %>
-				<%= render partial: 'components/collection/similar',
-									 locals:  {
-											 data: {
-													 user:  user,
-													 event: Event.find(show_similar_to.last)
-											 }
-									 },
-									 cached:  false %>
-			<% end %>
-			<% if disposition == :vertical && (infinite_scroll_vertical || display_load_more) && total_count > items.size %>
-				<div data-controller="toggle-loader"
-						 data-toggle-loader-listener-on="section#loadMoreHere->started"
-						 data-toggle-loader-listener-off="section#loadMoreHere->finished">
-					<div class="flex px-5 py-2 mx-auto my-10 text-center rounded-full shadow-xl cursor-pointer bg-chateau-green-100 text-chateau-green-800 w-content"
-							 data-action="click->section#loadMoreHere"
-							 data-target="section.loadMoreVertical toggle-loader.off">
-						Mostrar mais
-					</div>
-					<div class="flex hidden px-5 py-2 mx-auto my-10 text-center rounded-full shadow-xl cursor-pointer bg-chateau-green-100 text-chateau-green-800 w-content"
-							 data-target="toggle-loader.on">
-						Carregando
-						<svg data-target="toggle-loader.onIcon" class="w-5 h-5 my-auto fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-							<path fill="none" d="M0 0h24v24H0V0z"/>
-							<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
-						</svg>
-					</div>
-				</div>
-			<% end %>
-		</div>
-	<% else %>
-		<div class="px-5 mb-10">
-			<div class="text-sm text-gray-600"><%= empty_message %></div>
-			<%= link_to new_user_registration_path do %>
-				<div class="px-3 py-2 my-2 text-sm antialiased text-gray-600 border rounded-full border-chateau-green-300 text-chateau-green-500 w-content">Criar
-					conta
-				</div>
-			<% end %>
-		</div>
-	<% end %>
-</div>
-<%# end %>
+		<% else %>
+			<%= empty_message %>
+		<% end %>
+	</div>
+<% end %>
