--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -111,7 +111,7 @@
 								 empty_message:              "Crie uma conta para receber sugestões únicas",
 								 show_similar_to:            session[:stimulus][:show_similar_to],
 								 continue_to:                "/#{current_user&.slug}/sugestoes",
-								 display_if_empty:           true,
+								 display_if_empty:           false,
 								 display_load_more:          true,
 								 infinite_scroll_horizontal: true,
 								 disposition:                :horizontal,
@@ -136,14 +136,25 @@
 						 } %>
 
 	<% custom_title = capture do %>
-		<% if current_user %>
+		<% if current_user&.following_topics&.present? %>
 			<div class="grid grid-flow-col gap-3 pl-5 my-1 grid-after-margin md:pl-0 w-content">
 				<% current_user&.following_topics.filter { |topic| topic.events.active.size > 0 }.sort_by { |topic| topic.events.active.size }.reverse!.each do |topic| %>
-					<a data-controller="ripple" onclick="window.AnimateModule.animatePageHide()" href="<%= link_to_topic topic %>" class="relative inline-block px-4 py-3 overflow-hidden text-sm font-semibold text-gray-700 border rounded-md shadow-sm cursor-pointer hover:bg-gray-400 ripple ripple-black">
+					<a data-controller="ripple" href="<%= link_to_topic topic %>" class="relative inline-block px-4 py-3 overflow-hidden text-sm font-semibold text-gray-700 border rounded-md shadow-sm cursor-pointer hover:bg-gray-400 ripple ripple-black">
 						<%= topic.details_name.titleize %>
 						<% if topic.events.active.size > 0 %>
 							<span class="inline-flex items-center justify-center w-5 h-5 text-xs font-bold bg-gray-100 rounded-full"><%= topic.events.active.size %></span>
 						<% end %>
+					</a>
+				<% end %>
+			</div>
+		<% end %>
+	<% end %>
+	<% empty_message = capture do %>
+		<% unless current_user&.following_topics&.present? %>
+			<div class="gap-2 grid grid-cols-2 grid-flow-row-dense md:grid-cols-3 md:px-0 mt-5 my-1 px-5">
+				<% @events_this_week.map(&:organizers).flatten[0..10].each do |topic| %>
+					<a data-controller="ripple" href="<%= link_to_topic topic %>" class="relative inline-block px-4 py-3 overflow-hidden text-sm font-semibold leading-tight text-gray-700 border rounded-md shadow-sm cursor-pointer hover:bg-gray-100 ripple ripple-black">
+						<%= topic.details_name.titleize %>
 					</a>
 				<% end %>
 			</div>
@@ -157,10 +168,10 @@
 								 items:             @events_from_following_topics.limit(session[:stimulus][:limit]),
 								 total_count:       @events_from_following_topics.size,
 								 title:             {
-										 principal: "Tópicos que você segue",
+										 principal: current_user&.following_topics&.present? ? "Tópicos que você segue" : "Siga alguns tópicos",
 								 },
-								 empty_message:     "Crie uma conta para seguir tópicos e lugares",
-								 continue_to:       "/#{current_user&.slug}/seguindo",
+								 empty_message:     empty_message,
+								 continue_to:       current_user&.following_topics&.present? ? "/#{current_user&.slug}/seguindo" : nil,
 								 show_similar_to:   session[:stimulus][:show_similar_to],
 								 display_if_empty:  true,
 								 display_load_more: true,
@@ -191,7 +202,7 @@
 			<div class="grid grid-flow-col gap-3 pl-5 text-sm text-gray-800 grid-after-margin md:pl-0 w-content">
 				<% User.following_users(current_user).each do |user| %>
 					<%= link_to user_path(user), {class: ''} do %>
-						<div onclick="window.AnimateModule.animatePageHide()" class="flex flex-col items-center">
+						<div class="flex flex-col items-center">
 							<%= image_tag user.picture, {class: "mb-1 bg-cover bg-gray-400 h-12 md:h-16 md:w-16 rounded-full w-12", alt: user.name, onerror: "this.style.opacity='0'"} if user.picture %>
 							<%= tag.div class: "mb-1 bg-cover bg-gray-400 h-12 md:h-16 md:w-16 rounded-full w-12" unless user.picture %>
 							<%= user.first_name %>
@@ -213,7 +224,7 @@
 								 },
 								 empty_message:     "Crie uma conta para seguir pessoas",
 								 show_similar_to:   session[:stimulus][:show_similar_to],
-								 display_if_empty:  true,
+								 display_if_empty:  false,
 								 display_load_more: true,
 								 disposition:       :horizontal,
 								 custom_title:      custom_title,
@@ -287,7 +298,7 @@
 
 
 	<% if mobile_device? && current_user %>
-		<div data-controller="button ripple" data-target="button.button" class="select-none relative px-6 py-4 mx-auto overflow-hidden text-lg font-semibold text-center text-white rounded-full shadow-md bg-chateau-green-500 ripple ripple-white w-content" onclick="location.assign('/porto-alegre/eventos')">
+		<div data-controller="button ripple" data-target="button.button" class="relative px-6 py-4 mx-auto overflow-hidden text-lg font-semibold text-center text-white rounded-full shadow-md select-none bg-chateau-green-500 ripple ripple-white w-content" onclick="location.assign('/porto-alegre/eventos')">
 			Explorar todos os eventos
 		</div>
 	<% end %>
