--- a/web/app/views/layouts/_google_analytics.html.erb
+++ b/web/app/views/layouts/_google_analytics.html.erb
@@ -1,40 +1,48 @@
-<% if Rails.env == 'production' && !current_user.try(:admin?) %>
-	<!-- Google Analytics -->
-	<script>
-      (function (i, s, o, g, r, a, m) {
-          i["GoogleAnalyticsObject"] = r;
-          i[r] = i[r] || function () {
-              (i[r].q = i[r].q || []).push(arguments)
-          }, i[r].l = 1 * new Date();
-          a = s.createElement(o),
-              m = s.getElementsByTagName(o)[0];
-          a.async = 1;
-          a.src   = g;
-          m.parentNode.insertBefore(a, m)
-      })(window, document, "script", "https://www.google-analytics.com/analytics.js", "ga");
+<% return if Rails.env.production? && current_user.try(:admin?) %>
 
-      <% if current_user %>
-      ga("create", {
-          trackingId:   "UA-144190547-1",
-          cookieDomain: "auto",
-          userId: <%= current_user.id %>
-      });
-      <% else %>
-      ga("create", {
-          trackingId:   "UA-144190547-1",
-          cookieDomain: "auto"
-      });
-      <% end %>
+<!-- Google Analytics -->
+<script>
+    window.dataLayer = window.dataLayer || [];
 
-      document.addEventListener("turbolinks:load", (event) => {
-          if (event.data.url) {
-              ga("set", {
-                  location: event.data.url,
-                  title:    document.title
-              });
-              ga("send", "pageview");
-          }
-      })
-	</script>
-	<!-- End Google Analytics -->
-<% end %>
+    if (window.location.pathname === "/") {
+        window.dataLayer.push({
+                                  event: "pageview",
+                                  page:  {
+                                      path:  window.location.pathname,
+                                      title: document.title
+                                  }
+                              });
+    } else {
+        document.addEventListener("turbolinks:load", function (event) {
+            <% if current_user %>
+            window.dataLayer.push({
+                                      userId: <%= current_user.try(:id) %>
+                                  })
+            <% end %>
+            window.dataLayer.push({
+                                      event: "pageview",
+                                      page:  {
+                                          path:  window.location.pathname,
+                                          title: document.title
+                                      }
+                                  });
+
+        });
+    }
+
+    (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({
+                      "gtm.start":
+                             new Date().getTime(),
+                      event: "gtm.js"
+                  });
+        var f                          = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async                        = true;
+        j.src                          =
+            "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+    })(window, document, "script", "dataLayer", "GTM-WH7RVCR");
+</script>
+<!-- End Google Analytics -->
