--- a/web/app/views/layouts/welcome.html.erb
+++ b/web/app/views/layouts/welcome.html.erb
@@ -15,6 +15,8 @@
 	<link rel="apple-touch-icon" href="<%= image_url 'icons/launcher-icon-180x180.png' %>">
 
 	<%= render partial: 'layouts/meta-tags' %>
+	<%= render partial: 'layouts/google_analytics' %>
+
 	<%= canonical_url %>
 
 	<%= csrf_meta_tags %>
@@ -34,9 +36,10 @@
 	<meta name="ahrefs-site-verification" content="80da30957eb75f93ad532d2b460ba12112e89b2e64775da1150f2e02566667cf">
 </head>
 <body>
-
-<%= render 'layouts/google_analytics' %>
-
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WH7RVCR"
+									height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <%= yield %>
 
 <script rel="preconnect" src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer></script>
