--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -67,22 +67,9 @@
 	<% end %>
 
 	<div class="<%= class_names 'antialiased flex-1 font-light inline-flex items-center justify-end leading-tight md:font-semibold text-gray-700 text-right text-xs', 'hidden': ['search'].include?(controller_name) %>">
-		<%# if props[:visible][:share_button] %>
-		<!--			<amp-social-share-->
-		<!--				type="system"-->
-		<!--				class="custom-style"-->
-		<!--				data-param-text="<%#= content_for :share_button_text %>"-->
-		<!--				data-param-url="<%#= content_for :share_button_url %>"-->
-		<!--				data-param-attribution="Alegreme"-->
-		<!--				width="78"-->
-		<!--				height="28">-->
-		<!--				<span>Enviar</span>-->
-		<!--				<svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">-->
-		<!--					<path d="M0 0h24v24H0V0z" fill="none"/>-->
-		<!--					<path d="M3.4 20.4l17.45-7.48c.81-.35.81-1.49 0-1.84L3.4 3.6c-.66-.29-1.39.2-1.39.91L2 9.12c0 .5.37.93.87.99L17 12 2.87 13.88c-.5.07-.87.5-.87 1l.01 4.61c0 .71.73 1.2 1.39.91z"/>-->
-		<!--				</svg>-->
-		<!--			</amp-social-share>-->
-		<%# end %>
+		<% if props[:visible][:share_button] %>
+
+		<% end %>
 		<% if props[:visible][:user_menu] %>
 			<div>
 				<%= link_to current_user.first_name, user_path(current_user), class: "me-top-app-bar__name" %> <br>
